5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_2450.log
== SUBMITION (2019-04-11 10:48:56) 
-- CODE:
x=input().upper
y=input().upper

if(x>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- EXECUTION TIME:
0.160439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2450/main.py", line 4, in <module>
    if(x>y):
TypeError: unorderable types: builtin_function_or_method() > builtin_function_or_method()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:02) 
-- CODE:
x=input().upper
y=input().upper

if(x>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>y):
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:07) 
-- CODE:
x=input().upper()
y=input().upper()

if(x.>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- ERROR:
File "XXXX", line 4
    if(x.>y):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:14) 
-- CODE:
x=input().upper()
y=input().upper()

if(x>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:50:18) 
-- CODE:
x=input().upper()
y=input().upper()

if(x>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- EXECUTION TIME:
0.214508
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:20) 
-- CODE:
x=input().upper()
y=input().upper()

if(x>y):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:55) 
-- CODE:
x=input()
y=input()

if(x.upper()>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:50:58) 
-- CODE:
x=input()
y=input()

if(x.upper()>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- EXECUTION TIME:
0.176273
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:00) 
-- CODE:
x=input()
y=input()

if(x.upper()>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:51:36) 
-- CODE:
x=input()
y=input()

if(x.upper()<y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	


-- EXECUTION TIME:
0.159991
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
